# hostman

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  hosts  hosts.bak
ci/: before_deploy.ps1  before_deploy.sh
src/: cli.rs  commands.rs  file_utils.rs  hostsfile.rs  main.rs
src/commands/: mod.rs
