[package]
name = "hostman"
version = "0.5.0"
authors = ["Lucas Caro <lucascaro@gmail.com>"]
edition = "2018"
description = "A cli manager for /etc/hosts"
license = "MIT"

[dependencies]
clap = "2.32.0"
structopt = "0.2.14"
regex = "1.1.0"
self_update = "0.5.1"
nom = "5.0.0-alpha2"
hosts-parser = "0.1.0"