[package]
name = "hostman"
version = "0.5.2"
authors = ["Lucas Caro <lucascaro@gmail.com>"]
edition = "2018"
description = "A cli manager for /etc/hosts"
license = "MIT"

[dependencies.clap]
version = "2.33.0"

[dependencies]
structopt = "0.3.5"
regex = "1.3.1"
self_update = "0.8.0"
hosts-parser = "0.1.0"
colored = "1.9.0"